<resources>
    <string name="app_name">GeoQuiz</string>

    <string name="true_button">Верно</string>
    <string name="false_button">Не верно</string>
    <string name="next_button">Следующий</string>
    <string name="previous_button">Предыдущий</string>
    <string name="correct_toast">Правильно!!!</string>
    <string name="incorrect_toast">Неправильно((</string>

    <string name="warning_text">Вы уверены, что хотите сделать это?</string>
    <string name="show_answer_button">Показать ответ</string>
    <string name="cheat_button">Сжульничать</string>
    <string name="judgment_toast">Жулик не воруй.</string>

    <string name="question_australia">Канберра - это столица Австралии.</string>
    <string name="question_oceans">Тихий океан больше чем Атлантический океан.</string>
    <string name="question_mideast">Суэцкий канал соединяет Красное море и Индийский океан.</string>
    <string name="question_africa">Исток реки Нил находится в Египте.</string>
    <string name="question_americas">Река Амазонка - самая длинная река в Америке.</string>
    <string name="question_asia">Озеро Байкал является старейшим и самым глубоким пресноводным озером в мире.</string>
</resources>